fixed eyes to go behind the face.

--- a/keyboardEvents.css
+++ b/keyboardEvents.css
@@ -1,15 +1,38 @@
 
 #leftEye {
-    width: 50px; height: 50px; position: absolute; background: rgb(2, 2, 2); left: 300px; top: 300px;
-    border-radius: 25px; z-index:1;
+    width: 50px; 
+    height: 50px; 
+    position: relative; 
+    background: rgb(2, 2, 2); 
+    left: 300px; 
+    top: 300px;
+    border-radius: 25px; 
+    z-index:1;
 }
 
 #rightEye { 
-    width: 50px; height: 50px; position: absolute; background: rgb(2, 2, 2); left: 835px; top: 300px;
-    border-radius: 25px; z-index:1;
+    width: 50px; 
+    height: 50px; 
+    position: relative; 
+    background: rgb(2, 2, 2);
+    left: 835px; 
+    top: 250px;
+    /* background-image: url('crazyBobMedium.png'); */
+    border-radius: 25px; 
+    z-index:2;
 } 
 
 #bob {
-    background-image: url(bugEyesErased.png);
-    z-index: -1;
+    background-image: url('bugEyesErased.png') ;
+    background-repeat: no-repeat;
+    position: absolute; 
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    
+  
 } 
+
+body {
+    
+}
